# w25qxx_spi

./: fix_permissions.sh
WiringPi/: build
docker/: Dockerfile  build.sh  run.sh
w25qxx_spi/: Cargo.toml  build.rs  core  wrapper.h
w25qxx_spi/src/: main.rs  mod.rs  sha.rs  sha_check.rs  w25q.rs
