[package]
name = "w25qxx_spi"
version = "0.1.0"
authors = ["Lucas Zanella"]
edition = "2018"

[lib]
name = "w25qlib"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "sha"
path = "src/sha.rs"

[dependencies]
libc = "0.2.5"
ioctls = "0.6.1"
sha2 = "0.9.3"
rand = "0.8"

[build-dependencies]
bindgen = "0.57"

